@@ -1,1 +1,0 @@
-DIST ja2-stracciatella-0.14.01.tar.gz 9255755 SHA256 74c91e0bfae49071fdbb054cc1df3a96311bdca3b590e1fb8d994faa2f2e0a40 SHA512 08de64f2a15d0301e967274a61cfc0583f98df421fe06106821e1c2a0d635a64e9dde7b3ebae5c55764b5fcc0d3ec4bf23598c957fc4fb7f93a79112c57b6eb3 WHIRLPOOL 8749c67c5f8e58faa0f761a53740b159e3e07d003a72fe6df59d5c98aabee2e2345683ec4747c8badec7bddde83b72c447e1bfd7f169655db0a80e046dc97610
